--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 .form{
     background-color: rgba(0, 0, 82, 0.4);
     margin: auto;
-    width: 70%;
+    width: 60%;
     padding: 2%;
 }
 
@@ -28,6 +28,7 @@ textarea{
     width: 100%;
     height: 10em;
     resize: none;
+    margin: 15px 0px;
 }
 
 #submit{
@@ -42,6 +43,7 @@ select{
     height: 3em;
     font-size: 1em;
     font-family: monospace;
+    margin: 15px 0px;
 }
 
 #title,#description{
