--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ select{
 
 #title,#description{
     text-align: center;
+    width: 100%;
 }
 
 #description{
@@ -56,4 +57,10 @@ select{
 
 input{
     margin: 10px 10px;
+}
+
+@media only screen and (max-width: 600px) {
+    .form{
+    width: 80%;
+    }
 }
