extra right margin resolved

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background:linear-gradient(to right,rgba(85, 45, 122, 0.733),rgba(128, 128, 128, 0.3));
     width: 100%;
-    margin: 25px;
+    margin: auto;
     color: oldlace;
 }
 
